@@ -5,11 +5,8 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
@@ -46,8 +43,8 @@ jobs:
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -59,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
       name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -103,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "ArYe+u1iF1j1X7NMc+4F56Kbv5PmrEPh2We+TFGiS+EadYLsiGyB7tz8IltgFK5HLAK/VCe4VHzTAhJBJ9/0mWUx9F+CZI7lTR9o20DWIiwBfG/TZ0++uh8jkGHr5skUWFwR6ola3+e9M8I5xz/VT5lsGMEneR2XHhTKafgftlfJSkXfyDBi+cCUURbokk3zPtyGjiUd/MRDZWxhLPgVbE9y/E09D1dFxcT2P75vA1/ZPvqpAP5WGbapCiRj2MTpLxBJ9kJ61CwGwiY4c/0wSwiMmSYh25ZuqcA7QzJKyyFOiS+zQd8ftA/At9m75V66lSvMB8hMxRr1aqwcy2lDBRjWDhoJZ7oBRYxTQ5S11wpAt8ak2B7lWqTsrFPCXXEXWPG7VHaiwlvfRsan+EvGutcrGrFAO9etRmxdi5UNk/uZNqbZJkaRTH+Zb5dsmaXaQW7VqnGLOg25980kN6VBjOfzZr2aykEhBskn4lF+SAdxGIxxYnmaTcXybc/wPmBJaRah3AIG6LvweONXFAPR01HlZCY1OusO+qH3Axv69VwMEQot/HHieDHEW1ZC1eKHDOoTCzywoN2pHyasbhRe9xe2ee5Yxar6hgzYRdCRQHuoVuxOvQRDvBUbwUQmYITEXWD9LylMkv21K6rAz5B9UjTBvcMaXbOHLG8zorfEuKo="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -111,7 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "swR/ubedBph+fFfQKQP1b/x1oISGjnH3U8N1u3cNBVpD87zmPdR1qEkxmoYl5ZGp4NVMu9gBMgN80tS69AUfSIIrPGRynU0SzZ8ssI80tpzPlOXzG1JWx29Hogvgay/XUFTi5oCRDPA+uahI+9V7itLc2lerdhJClJF2OkZ3sISTFp1zAGSA8/3zvOn+5mmYs6Fecv//nOTAvLjBgpWcG/FJCVcIxoeW9dIPzj9EmL0iKwHzzqElfcbrqNX/FE+rgELPfNVdS/OXQz46Kgoz471jyRWd1qwLwDE/PvvpZs38zdKyDuOtpDPkaCbCSzxTEpUBAfte4bFAlDJufnlnudwMKSZA8+OYXwpn7607W0+KDtNQZ/w4WZ1dBuX60LdcetTmxoJWn5mshR00BSheiz1cYjQq+IQn2bVA7Y9LOqL/nLU1rrkbtI/SQBvvmXPic8D+92RXDUumdIZ0gyf2hv0d31dUtCglsBD966mI9gFyfDtl5O1+hFXscHGVxTWingwD4AylGpyy7J3yI28WZyz7PfTPu1nLjQ6ZbbFL5u0C4Ka8lSrkjlDsVaoD/eV13If7arlPlqZpmzy7KBMBCPtj9ez1Ufp41fDceejCIpf1PGeuhgAkR3xCrV+dgEuvVDq3oj9oqq+MsmiUATSc/7Lhhff7tUhIUrtN4xlkbf0="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
